--- a/src/pages/resources/forge-migration.astro
+++ b/src/pages/resources/forge-migration.astro
@@ -106,8 +106,8 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
                     <td class="py-2"><span class="bg-green-600 text-white px-2 py-1 rounded text-xs">Same</span></td>
                   </tr>
                   <tr class="border-b border-slate-700">
-                    <td class="py-2 font-mono">PUT /oss/v2/buckets/{bucket}/objects/{object}</td>
-                    <td class="py-2 font-mono text-green-400">PUT /oss/v2/buckets/{bucket}/objects/{object}</td>
+                    <td class="py-2 font-mono">PUT /oss/v2/buckets/&#123;bucket&#125;/objects/&#123;object&#125;</td>
+                    <td class="py-2 font-mono text-green-400">PUT /oss/v2/buckets/&#123;bucket&#125;/objects/&#123;object&#125;</td>
                     <td class="py-2"><span class="bg-green-600 text-white px-2 py-1 rounded text-xs">Same</span></td>
                   </tr>
                 </tbody>
@@ -134,8 +134,8 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
                     <td class="py-2"><span class="bg-green-600 text-white px-2 py-1 rounded text-xs">Same</span></td>
                   </tr>
                   <tr class="border-b border-slate-700">
-                    <td class="py-2 font-mono">GET /modelderivative/v2/designdata/{urn}/manifest</td>
-                    <td class="py-2 font-mono text-green-400">GET /modelderivative/v2/designdata/{urn}/manifest</td>
+                    <td class="py-2 font-mono">GET /modelderivative/v2/designdata/&#123;urn&#125;/manifest</td>
+                    <td class="py-2 font-mono text-green-400">GET /modelderivative/v2/designdata/&#123;urn&#125;/manifest</td>
                     <td class="py-2"><span class="bg-green-600 text-white px-2 py-1 rounded text-xs">Same</span></td>
                   </tr>
                 </tbody>
